chore: update ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,9 +22,6 @@ jobs:
           python -m pip install --upgrade pip
           pip install genpac
 
-      - name: Create dist directory
-        run: mkdir ./dist
-
       - name: Run genpac for Clash
         run: genpac --format=pac --user-rule-from=rules.txt --pac-proxy="$(cat ./clash.txt)" > ./dist/pac-clash.txt
 
@@ -36,17 +33,8 @@ jobs:
         with:
           format: yyyy-MM-DD
 
-      - name: Go to dist directory
-        run: cd ./dist
-
-      - name: Git Auto Commit
-        run: |
-          git init
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
-          git remote rm origin
-          git remote add origin "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git"
-          git checkout --orphan dist
-          git add --all
-          git commit --allow-empty -m "[${{ steps.time.outputs.formattedTime }}] update pac files" --no-verify --author="${GITHUB_ACTOR} <${GITHUB_ACTOR}@users.noreply.github.com>"
-          git push origin dist --force
+      - uses: EndBug/add-and-commit@v9
+        with:
+          message: "[${{ steps.time.outputs.formattedTime }}] update pac files"
+          author_name: "github-actions[bot]"
+          author_email: "github-actions[bot]@users.noreply.github.com"
